Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10764

Incorrect code in ct_archive

XMLWordPrintable

    • 3
    • 9223372036854775807

      It contains this lovely code:

                              if (sz == 0 || strncmp(buf, dst, sz) != 0) {
                                      if (unlink(src) && errno != ENOENT) {
                                              CT_ERROR(errno,
                                                       "cannot unlink symlink '%s'",
                                                       src);
                                              rcf = rcf ? rcf : -errno;
                                              goto fini_minor;
                                      /* unlink old symlink done */
                                      CT_TRACE("remove old symlink '%s' pointing"
                                               " to '%s'", src, buf);
                                      }
      

      Clearly we want the closing bracket after the goto, so the TRACE could be printed.

            green Oleg Drokin
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: